--- a/kaggle/Binary Prediction of Smoker Status using Bio-Signals/blend.ipynb
+++ b/kaggle/Binary Prediction of Smoker Status using Bio-Signals/blend.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "blend1 = pd.read_csv('xgb_opt_submission.csv')\n",
-    "blend2 = pd.read_csv('blend_submission.csv')"
+    "blend2 = pd.read_csv('lgbm_submission.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "result_df.columns = ['id', 'smoking']\n",
     "\n",
     "# 결과를 CSV 파일로 저장합니다.\n",
-    "result_df.to_csv('./xgb_4_blend_submission.csv', index=False)"
+    "result_df.to_csv('./xgb_opt_lgbm_submission.csv', index=False)"
    ]
   },
   {
