--- a/kaggle/Binary Prediction of Smoker Status using Bio-Signals/XGBoost.ipynb
+++ b/kaggle/Binary Prediction of Smoker Status using Bio-Signals/XGBoost.ipynb
@@ -717,6 +717,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 이상치 제거\n",
+    "train_df = train_df.drop(train_df[train_df['triglyceride'] > 700].index)\n",
+    "train_df = train_df.drop(train_df[train_df['HDL'] > 350].index)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a28dbb18",
    "metadata": {
@@ -1076,7 +1087,7 @@
     "\n",
     "def objective(trial):\n",
     "    # Load the dataset and split it into training and testing sets\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(train_df[model_features], train_df['smoking'], test_size=0.25, random_state=SEED)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(train_df[model_features], train_df['smoking'], test_size=0.2, random_state=SEED)\n",
     "\n",
     "    # Define the hyperparameters to be optimized\n",
     "    param = {\n",
@@ -1390,7 +1401,7 @@
     "%%time\n",
     "submission = pd.read_csv('./sample_submission.csv')\n",
     "submission['smoking'] = xgboost_predictions\n",
-    "submission.to_csv('./xgb_opt_submission.csv', index = False)\n",
+    "submission.to_csv('./xgb_opt_outlier_submission.csv', index = False)\n",
     "submission"
    ]
   },
