--- a/kaggle/Binary Prediction of Smoker Status using Bio-Signals/blend.ipynb
+++ b/kaggle/Binary Prediction of Smoker Status using Bio-Signals/blend.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,13 +14,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum(abs(blend1['smoking']-blend2['smoking']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "3497/106171"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 가중 평균을 위한 가중치를 설정합니다.\n",
-    "weight1 = 0.5  # 첫 번째 DataFrame의 가중치\n",
-    "weight2 = 0.5  # 두 번째 DataFrame의 가중치\n",
+    "weight1 = 0.8  # 첫 번째 DataFrame의 가중치\n",
+    "weight2 = 0.2  # 두 번째 DataFrame의 가중치\n",
     "\n",
     "# 두 DataFrame의 'smoking' 열을 가중 평균합니다.\n",
     "result_df = (blend1['smoking'] * weight1) + (blend2['smoking'] * weight2)\n",
