chore: add feature

--- a/kaggle/Binary Prediction of Smoker Status using Bio-Signals/XGBoost.ipynb
+++ b/kaggle/Binary Prediction of Smoker Status using Bio-Signals/XGBoost.ipynb
@@ -603,8 +603,8 @@
     "    df['HA_Ratio'] = df['height(cm)'] / df['age']\n",
     "    return df\n",
     "\n",
-    "#train_df = create_features(train_df)\n",
-    "#test_df = create_features(test_df)"
+    "# train_df = create_features(train_df)\n",
+    "# test_df = create_features(test_df)"
    ]
   },
   {
@@ -638,8 +638,8 @@
     "                df[col_one +'_to_'+ col_two] = df[col_one] / df[col_two]\n",
     "    return df\n",
     "\n",
-    "#train_df = massive_feature(train_df, ignore_list = ['id', 'smoking', 'is_original', 'dental caries','hearing(left)','hearing(right)',])\n",
-    "#test_df = massive_feature(test_df, ignore_list = ['id', 'smoking', 'is_original', 'dental caries','hearing(left)','hearing(right)',])"
+    "# train_df = massive_feature(train_df, ignore_list = ['id', 'smoking', 'is_original', 'dental caries','hearing(left)','hearing(right)',])\n",
+    "# test_df = massive_feature(test_df, ignore_list = ['id', 'smoking', 'is_original', 'dental caries','hearing(left)','hearing(right)',])"
    ]
   },
   {
@@ -722,9 +722,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 이상치 제거\n",
-    "train_df = train_df.drop(train_df[train_df['triglyceride'] > 700].index)\n",
-    "train_df = train_df.drop(train_df[train_df['HDL'] > 350].index)"
+    "train_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_df['BMI'] = train_df['weight(kg)']/((train_df['height(cm)']*0.01)**2)\n",
+    "# train_df.insert(len(train_df.columns) - 1, 'BMI', train_df['weight(kg)'] / ((train_df['height(cm)'] * 0.01) ** 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 이상치 제거\n",
+    "# train_df = train_df.drop(train_df[train_df['triglyceride'] > 700].index)\n",
+    "# train_df = train_df.drop(train_df[train_df['HDL'] > 350].index)"
    ]
   },
   {
@@ -807,8 +835,8 @@
     "    \"\"\"\n",
     "    return pd.get_dummies(df, columns=categorical_features)\n",
     "\n",
-    "# train_df = one_hot_encode(train_df, categorical_features)\n",
-    "# test_df = one_hot_encode(test_df, categorical_features)"
+    "train_df = one_hot_encode(train_df, categorical_features)\n",
+    "test_df = one_hot_encode(test_df, categorical_features)"
    ]
   },
   {
@@ -1087,7 +1115,7 @@
     "\n",
     "def objective(trial):\n",
     "    # Load the dataset and split it into training and testing sets\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(train_df[model_features], train_df['smoking'], test_size=0.2, random_state=SEED)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(train_df[model_features], train_df['smoking'], test_size=0.25, random_state=SEED)\n",
     "\n",
     "    # Define the hyperparameters to be optimized\n",
     "    param = {\n",
@@ -1401,8 +1429,17 @@
     "%%time\n",
     "submission = pd.read_csv('./sample_submission.csv')\n",
     "submission['smoking'] = xgboost_predictions\n",
-    "submission.to_csv('./xgb_opt_outlier_submission.csv', index = False)\n",
+    "submission.to_csv('./xgb_one_hot_submission.csv', index = False)\n",
     "submission"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df"
    ]
   },
   {
@@ -1464,7 +1501,7 @@
     "test_df['predictions'] = xgboost_predictions\n",
     "test_df.head()\n",
     "\n",
-    "cutoff = 0.95 # Probability CutOff...\n",
+    "cutoff = 0.90 # Probability CutOff...\n",
     "pseudo_set_1 = test_df[test_df['predictions'] > cutoff]\n",
     "pseudo_set_1['smoking'] = 1\n",
     "pseudo_set_1.drop(columns=['predictions'], axis = 1, inplace=True)\n",
@@ -1551,7 +1588,7 @@
     "%%time\n",
     "submission = pd.read_csv('./sample_submission.csv')\n",
     "submission['smoking'] = xgboost_predictions\n",
-    "submission.to_csv('./xgb_pseudo_opt_submission.csv', index = False)\n",
+    "submission.to_csv('./xgb_pseudo_one_hot_submission.csv', index = False)\n",
     "submission"
    ]
   },
